<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:icon="@android:drawable/ic_menu_upload"
        android:id="@+id/load"
        android:title="@string/load"
        app:showAsAction="always" />
    <item
        android:icon="@android:drawable/ic_menu_save"
        android:id="@+id/save"
        android:title="@string/save"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/refresh"
        android:title="@string/refresh"
        app:showAsAction="never"/>
    <item
        android:id="@+id/data_storage_menu_item"
        android:title="@string/datastorage"
        app:showAsAction="never"/>
    <item
        android:id="@+id/exit"
        android:title="@string/exit"
        app:showAsAction="never"></item>
</menu>
