<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:layout_width="fill_parent"
    android:scrollbars="none">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mytable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow>

            <TextView
                android:layout_width="217dp"
                android:layout_height="wrap_content"
                android:background="#2B3780"
                android:padding="3dip"
                android:text="@string/table_symbol"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FFFFFF" />

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:background="#2B3780"
                android:padding="3dip"
                android:text="@string/table_change"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FFFFFF" />

            <TextView
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:background="#2B3780"
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/table_price"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FFFFFF" />
        </TableRow>
    </TableLayout>
</ScrollView>